--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>carousel array</title>
+    <title>Carosello oggwtti</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    
+    <div class="slider">
+		<!-- <div>
+			<img src="img" alt="">
+			<h1>title</h1>
+			<p>testo</p>
+		</div> -->
+        <!-- <div>
+            <img class="img" src="img/01.jpg" alt="image">
+        </div> -->
+        <div class="controls">
+			<div class="btn-top">&#8593;</div>
+			<div class="btn-bottom">&#8595;</div>
+		</div>
+    </div>
 </body>
 </html>
